# RAG-Powered-Domain-Expert-System

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.backend  Dockerfile.dashboard  Dockerfile.frontend  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.bat  start.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: main.py
backend/: __init__.py  document_processor.py  embeddings.py  main.py  rag_pipeline.py  requirements.txt
backend/uploads/: .gitkeep
config/: __init__.py  settings.py
core/: __init__.py  agent.py  celery_worker.py  db.py  document_processor.py  embeddings.py  query_engine.py  vector_store.py
dashboard/: __init__.py  app.py
docs/: API.md  CHANGELOG.md  DEPLOYMENT.md  GITHUB_SETUP.md  QUICK_START.md  TECHNICAL_DEEP_DIVE.md  TROUBLESHOOTING.md  WORKFLOW_VISUAL.md
docs/metrics/: after_reranking.json  agent.json  baseline.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  DocumentSidebar.jsx  MessageBubble.jsx  SettingsPanel.jsx
scripts/: __init__.py  baseline_eval.py  check_db_entries.py  demo.py  rerank_eval.py  run_final_benchmark.py  sample_contract.txt  test_agent.py  test_celery_worker.py  test_db_logging.py  test_suite.py
tests/: test_api.py
