[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragcore"
version = "1.0.0"
description = "Self-correcting RAG agent pipeline with Cross-Encoder reranking, Celery async tasks, and Ragas evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mohamed Noor Ul Naseem", email = "noorulnaseem11@gmail.com"}
]
keywords = ["rag", "ai", "llm", "document-analysis", "openai", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "openai>=1.3.0",
    "langchain>=0.0.340",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/mohamednoorulnaseem/ragcore"
Documentation = "https://github.com/mohamednoorulnaseem/ragcore/tree/main/docs"
Repository = "https://github.com/mohamednoorulnaseem/ragcore"
"Bug Tracker" = "https://github.com/mohamednoorulnaseem/ragcore/issues"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=api --cov=core"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["api", "core"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101", "B601"]
